# quickcast

./: .gitignore  README.md  mockdata.py  pyproject.toml  quickcast.py  requirements.txt
tools/: hero.py  shot.py  shots.py
