[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "quickcast"
version = "0.1.0"
description = "A minimal GNOME/Linux remote control for Jellyfin with Chromecast support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "PyGObject>=3.42.0",
    "pychromecast>=13.0.0",
    "requests>=2.28.0",
]

[project.scripts]
quickcast = "quickcast:main"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"quickcast.py" = ["E402"]

[tool.setuptools]
py-modules = ["quickcast"]